--- a/lambda/.gitignore
+++ b/lambda/.gitignore
@@ -1,4 +1,23 @@
-test.py
-*.dist-info
-*.egg-info
-__pycache__
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Serverless directories
+.serverless
+
+node_modules/**
+package-lock.json
