--- a/lambda/Pipfile
+++ b/lambda/Pipfile
@@ -8,7 +8,7 @@ google-api-python-client = "==1.6.4"
 googleapis-common-protos = "==1.3.5"
 mapbox = "==0.14.0"
 python-dateutil = "==2.6.1"
-requests = "==2.18.4"
+requests = "*"
 requests-mock = "==1.4.0"
 Pillow = "==4.3.0"
 
