--- a/lambda/Pipfile
+++ b/lambda/Pipfile
@@ -4,13 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-google-api-python-client = "==1.6.4"
-googleapis-common-protos = "==1.3.5"
-mapbox = "==0.14.0"
-python-dateutil = "==2.6.1"
+google-api-python-client = "*"
+googleapis-common-protos = "*"
+mapbox = "*"
+python-dateutil = "*"
 requests = "*"
-requests-mock = "==1.4.0"
-Pillow = "==4.3.0"
+requests-mock = "*"
+Pillow = "*"
 
 [dev-packages]
 
